2008-09-29  Lluis Sanchez Gual <lluis@novell.com> 

	* templates/Makefile.include: Set MONO_IOMAP=drive when running resgen
	  since resx files may contain Windows style paths. Fixes bug
	  #398812.
	* gtk-gui/objects.xml: Update.

2008-09-17  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Autotools.mdp: Updated projects.

2008-09-12  Lluis Sanchez Gual <lluis@novell.com> 

	* MakefileIntegrationFeatureWidget.cs, gtk-gui/generated.cs,
	  gtk-gui/MonoDevelop.Autotools.MakefileIntegrationFeatureWidget.cs,
	  gtk-gui/MonoDevelop.Autotools.TarballBuilderEditorWidget.cs,
	  gtk-gui/objects.xml,
	  gtk-gui/MonoDevelop.Autotools.MakefileOptionPanelWidget.cs,
	  gtk-gui/MonoDevelop.Autotools.GenerateMakefilesDialog.cs: Updated
	  generated code.

2008-09-04  Lluis Sanchez Gual <lluis@novell.com> 

	* FileNodeBuilderExtension.cs, Commands.cs: Moved the extensible tree
	  view to its own directory.

2008-08-15  Dean Brettle <dean@brettle.com>

	* SimpleProjectMakefileHandler.cs: 
	Fixed bug 417791 by using "resgen1" (for ClrVersion.Net_1_1 )
	and "resgen2" for ClrVersion.Net_2_0, but only when the current
	runtime major version is greater than 1.

2008-07-29  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Autotools.mdp: Removed some parts of the documentation
	  service.

2008-07-21  Lluis Sanchez Gual <lluis@novell.com> 

	* Handler.cs, MakefileData.cs, MakefileVar.cs,
	  SimpleProjectMakefileHandler.cs, SolutionDeployer.cs: Moved
	  serialization engine to MonoDevelop.Core. Use new syntax for
	  specifying attribute scope.

2008-06-10  Andres G. Aragoneses <aaragoneses@novell.com> 

	* SimpleProjectMakefileHandler.cs: Implement feature to allow unmanaged
	  project references in a managed project (bug#397490).

2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 

	* SimpleProjectMakefileHandler.cs: GetOutputFileName now requires a
	  solution configuration, not a project configuration.

2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 
